# Jade-Data-Aggregator

./: .dockerignore  .env  .env.backup  .env.example  .gitignore  BOOTSTRAP.md  CHANGELOG.md  CODE_REVIEW.md  COMPREHENSIVE_CODE_DOCUMENTATION_REVIEW.md  CONTRIBUTING.md  CRITICAL_FIXES_APPLIED.md  DOCUMENTATION_INTEGRITY_REPORT.md  Dockerfile  Gemini_code_review.md  IMPLEMENTATION_TASKS.md  IMPLEMENTATION_TASKS_OLD.md  INTEGRITY_CHECK_SUMMARY.md  LICENSE  PENDING_TASKS_OCT_24.md  PHASE_8_BACKEND_COMPLETE.md  PHASE_8_COMPLETE.md  PHASE_8_DEVELOPER_ROLE_ADDENDUM.md  PHASE_8_IMPLEMENTATION_PLAN.md  QUICK_START_LOCAL.md  README.md  README.md.backup  SESSION_COMPLETE_SUMMARY.md  SESSION_SUMMARY_OCT18_2025.md  TUTORIAL_APP_SPECIFICATION.md  TUTORIAL_IMPLEMENTATION_PLAN.md  TUTORIAL_TASKS.md  Tasks-Dec-6.md  UseCases.md  UserGuide-Qwen-Generated.md  UserGuide.md  WEEK1_BACKEND_SERVICE_TESTS_COMPLETE.md  WEEK2_T2.2_FORM_TESTS_COMPLETE.md  build-and-deployment.md  docker-compose.test.yml  docker-compose.yml  (+3 more)
backend/: .env.test  Dockerfile  Dockerfile.test  main.py  pyproject.toml  pytest.ini  task-definition.json
backend/api/v1/: api.py
backend/api/v1/endpoints/: admin.py  admin_cleanup.py  alerts.py  analytics.py  analytics_advanced.py  auth.py  configuration.py  connectors.py  dashboard.py  dashboards.py  file_upload.py  health.py  logs.py  monitoring.py  pipeline_builder.py  pipeline_execution.py  pipeline_templates.py  pipeline_versions.py  pipelines.py  preferences.py  roles.py  schema.py  search.py  transformation_functions.py  transformations.py  users.py  websocket.py
backend/backend/tests/: conftest.py
backend/backend/tests/integration/: test_connector_crud.py  test_pipeline_crud.py  test_rbac_endpoints.py  test_transformation_crud.py
backend/backend/tests/unit/: test_cleanup_service.py  (+2 more)
backend/config/: cors.py  security.py
backend/core/: config.py  database.py  database_backup.py  error_handler.py  init_db.py  permissions.py  rbac.py  security.py  websocket.py
backend/crud/: __init__.py  connector.py  pipeline.py  pipeline_run.py  transformation.py  user.py
backend/middleware/: README.md  admin_protection.py  dev_role_protection.py  inactive_user.py  input_validation.py  rate_limiting.py  security_headers.py  session_timeout.py
backend/models/: __init__.py  activity_log.py  auth_token.py  connector.py  file_upload.py  monitoring.py  pipeline.py  pipeline_run.py  pipeline_template.py  schema_mapping.py  system_settings.py  transformation.py  user.py  user_preferences.py
backend/monitoring/: __init__.py  health.py  prometheus.py  sentry.py
backend/schemas/: auth.py  connector.py  pipeline.py  pipeline_run.py  pipeline_visual.py  transformation.py  user.py
backend/scripts/: seed_test_data.py
backend/services/: activity_log_service.py  alert_management_service.py  analytics_engine.py  auth_service.py  cache_service.py  cleanup_service.py  cleanup_statistics_service.py  config_schema_service.py  connection_test_service.py  dashboard_layout_service.py  email_service.py  event_service.py  export_service.py  file_upload_service.py  file_validation_service.py  health_check_service.py  logging_service.py  metrics_streaming_service.py  permission_service.py  pipeline_execution_engine.py  pipeline_executor.py  pipeline_template_service.py  pipeline_validation_service.py  pipeline_version_service.py  realtime_pipeline_service.py  schema_introspector.py  schema_mapper.py  search_service.py  transformation_function_service.py  user_preferences_service.py
backend/utils/: error_handling.py
(+553 files in other folders)
