[tool.poetry]
name = "data-aggregator-platform"
version = "0.1.0"
description = "A comprehensive data integration solution designed to connect, process, and deliver data from multiple sources in a standardized format."
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
redis = "^5.0.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
celery = "^5.3.4"
kafka-python = "^2.0.2"
pandas = "^2.1.3"
requests = "^2.31.0"
aiofiles = "^23.2.1"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
cryptography = "^41.0.7"
httpx = "^0.25.2"
aiokafka = "^0.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.5.0"
bandit = "^1.7.6"
httpx = "^0.25.2"
factory-boy = "^3.3.0"
faker = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "backend.main:main"