[tool.poetry]
name = "data-aggregator-platform"
version = "0.1.0"
description = "A comprehensive data integration solution designed to connect, process, and deliver data from multiple sources in a standardized format."
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.122.0"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
redis = "^5.0.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.20"
celery = "^5.3.4"
kafka-python = "^2.0.2"
pandas = "^2.1.3"
requests = "^2.31.0"
aiofiles = "^23.2.1"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
cryptography = "^46.0.3"
httpx = "^0.25.2"
aiokafka = "^0.8.1"
python-magic = "^0.4.27"
pillow = "^11.3.0"
openpyxl = "^3.1.5"
xlrd = "^2.0.2"
chardet = "^5.2.0"
pyclamd = "^0.4.0"
structlog = "^25.4.0"
python-json-logger = "^3.3.0"
prometheus-client = "^0.23.1"
psutil = "^7.1.0"
pymysql = "^1.1.0"

# Required for FastAPI/Uvicorn WebSocket support
websockets = "^11.0.3"
httptools = "^0.6.1"
uvloop = "^0.19.0"
watchfiles = "^0.21.0"
ecdsa = "^0.19.1"

[tool.poetry.group.dev.dependencies]
black = "^25.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.5.0"
bandit = "^1.7.6"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pip-audit = "^2.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "backend.main:main"

[tool.pytest.ini_options]
testpaths = ["testing"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "asyncio: mark test as async",
    "unit: mark test as unit test",
    "integration: mark test as integration test",
    "security: mark test as security test"
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "*/tests/*",
    "*/testing/*",
    "*/__pycache__/*",
    "*/venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]